# credit-check-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env.example  alembic.ini  main.py
src/api/routes/: checks.py  health.py
src/core/: config.py  database.py  enums.py  exceptions.py  logging.py
src/migrations/: env.py
src/migrations/versions/: 2026_07_09_1202-aea850cab3a3_initial.py  2026_07_10_1901-097dac109ea7_add_position_to_documents_and_issues.py  2026_07_11_0038-f7839b79e3e4_add_idempotency_keys_table.py  2026_07_14_1000-b2c1d0e9f8a7_document_storage_path_nullable.py  2026_07_14_1030-c3d2e1f0a9b8_add_fk_and_list_indexes.py  2026_07_14_1100-d4e3f2a1b0c9_add_package_id_to_checks.py  2026_07_14_1130-e5f4a3b2c1d0_add_created_by_to_checks.py  2026_07_14_1200-f6a5b4c3d2e1_checked_at_server_default_drop_created_at.py
src/models/: __init__.py  base.py  check.py  document.py  idempotency_key.py  issue.py  mixin.py
src/repositories/: check.py  dto.py  idempotency.py
src/schemas/: check.py  pagination.py
src/services/: check_service.py  cursor.py  document_classifier.py  document_types.py  fingerprint.py  issue.py  status.py  upload.py  validation.py
src/storage/: files.py
tests/: conftest.py  test_checks.py  test_document_classifier.py  test_files.py  test_fingerprint.py  test_health.py  test_schemas.py  test_status.py  test_validation.py
