[project]
name = "credit-check-api"
description = "API service for preliminary validation of subsidized-loan document packages"
requires-python = "==3.11.*"
version = "0.1.0"
authors = [{ name = "Dmitrii Isaev", email = "dimais@mail.ru" }]
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "mypy>=2.2.0",
  "pytest>=9.1.1",
  "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "SIM",
  "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["core", "main"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true
files = ["src", "tests"]
exclude = []
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]
